# vkguide-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  compile_shaders.py
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp
src/: lib.rs
src/chapter1/engine/: engine.rs  mod.rs
src/chapter2/: main.rs
src/chapter2/engine/: engine.rs  mod.rs
src/chapter3/engine/: engine.rs
src/utils/: fps.rs
src/vulkan/: buffers.rs  descriptors.rs  images.rs  mod.rs  pipelines.rs  queue.rs  swapchain.rs  types.rs
