[package]
name = "vkguide-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38", default-features = false, features = [
  "debug",
  "linked",
  "std",
] }
ash-window = "0.13.0"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui-ash-renderer = { version = "0.8.0", default-features = false, features = [
  "dynamic-rendering",
  "gpu-allocator",
] }
egui-winit = "0.31.1"
env_logger = "0.11.8"
gpu-allocator = { version = "0.27.0", features = [
  "vulkan",
], default-features = false }
glam = "0.30.5"
log = "0.4"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
winit = "0.30.12"
anyhow = "1.0.99"
bytemuck = "1.23.2"

[[bin]]
name = "chapter1"
path = "src/chapter1/main.rs"

[[bin]]
name = "chapter2"
path = "src/chapter2/main.rs"

[[bin]]
name = "chapter3"
path = "src/chapter3/main.rs"
